BusInfoActivity 백그라운드 컬러

--- a/app/src/main/res/layout/activity_bus_info.xml
+++ b/app/src/main/res/layout/activity_bus_info.xml
@@ -1,9 +1,12 @@
 <layout>
+
     <data>
+
         <variable
             name="item"
-            type="kr.edcan.buspolis.model.RM_Bus"/>
+            type="kr.edcan.buspolis.model.RM_Bus" />
     </data>
+
     <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
         xmlns:app="http://schemas.android.com/apk/res-auto"
         xmlns:tools="http://schemas.android.com/tools"
@@ -16,7 +19,7 @@
         <RelativeLayout
             android:id="@+id/headerBackground"
             android:layout_width="match_parent"
-            android:layout_height="@dimen/app_bar_height"
+            android:layout_height="220dp"
             android:background="#54A953">
 
             <ImageView
@@ -29,43 +32,87 @@
                 android:src="@drawable/ic_back" />
 
             <LinearLayout
-                android:layout_width="wrap_content"
+                android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:layout_alignParentBottom="true"
-                android:layout_margin="@dimen/activity_horizontal_margin"
-                android:orientation="vertical">
+                android:gravity="bottom"
+                android:orientation="horizontal"
+                android:weightSum="1">
 
-                <TextView
-                    android:id="@+id/busNumber"
+                <LinearLayout
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:textColor="@android:color/white"
-                    android:textSize="@dimen/ex_large_text"
-                    android:textStyle="bold" />
+                    android:layout_margin="@dimen/activity_horizontal_margin"
+                    android:layout_weight="1"
+                    android:orientation="vertical">
 
-                <TextView
-                    android:id="@+id/busRoute"
+                    <LinearLayout
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:orientation="vertical">
+
+                        <TextView
+                            android:id="@+id/busNumber"
+                            android:layout_width="match_parent"
+                            android:layout_height="wrap_content"
+                            android:text="asdf"
+                            android:textColor="@android:color/white"
+                            android:textSize="@dimen/ex_large_text"
+                            android:textStyle="bold" />
+
+                        <TextView
+                            android:id="@+id/busRouteFirst"
+                            android:layout_width="wrap_content"
+                            android:layout_height="wrap_content"
+                            android:singleLine="true"
+                            android:text="asdfasdfasdfasdfasdf"
+                            android:textColor="@color/textLight"
+                            android:textSize="@dimen/large_text"
+                            android:textStyle="bold" />
+
+                        <TextView
+                            android:id="@+id/busRouteMiddle"
+                            android:layout_width="match_parent"
+                            android:layout_height="wrap_content"
+                            android:gravity="center"
+                            android:singleLine="true"
+                            android:text="↕"
+                            android:textColor="@color/textLight"
+                            android:textSize="@dimen/large_text"
+                            android:textStyle="bold" />
+
+                        <TextView
+                            android:id="@+id/busRouteEnd"
+                            android:layout_width="wrap_content"
+                            android:layout_height="wrap_content"
+                            android:singleLine="true"
+                            android:text="asdf"
+                            android:textColor="@color/textLight"
+                            android:textSize="@dimen/large_text"
+                            android:textStyle="bold" />
+                    </LinearLayout>
+                </LinearLayout>
+
+                <RelativeLayout
                     android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:textColor="@color/textLight"
-                    android:textSize="@dimen/large_text"
-                    android:textStyle="bold" />
+                    android:layout_height="match_parent">
+
+                    <kr.edcan.buspolis.view.CartaTagView
+                        android:id="@+id/busInfo"
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:layout_alignParentBottom="true"
+                        android:layout_gravity="bottom"
+                        android:layout_margin="@dimen/activity_horizontal_margin"
+                        android:paddingBottom="8dp"
+                        android:paddingLeft="40dp"
+                        android:paddingRight="40dp"
+                        android:paddingTop="8dp"
+                        android:text="@string/info"
+                        android:textSize="@dimen/default_text"
+                        app:themeColor="@android:color/white" />
+                </RelativeLayout>
             </LinearLayout>
-
-            <kr.edcan.buspolis.view.CartaTagView
-                android:id="@+id/busInfo"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_alignParentBottom="true"
-                android:layout_alignParentRight="true"
-                android:layout_margin="@dimen/activity_horizontal_margin"
-                android:paddingBottom="8dp"
-                android:paddingLeft="40dp"
-                android:paddingRight="40dp"
-                android:paddingTop="8dp"
-                android:text="@string/info"
-                android:textSize="@dimen/default_text"
-                app:themeColor="@android:color/white" />
         </RelativeLayout>
 
         <RelativeLayout
