--- a/app/src/main/res/layout/content_main_header.xml
+++ b/app/src/main/res/layout/content_main_header.xml
@@ -30,7 +30,7 @@
                 android:padding="@dimen/cardview_padding">
 
                 <LinearLayout
-                    android:layout_width="wrap_content"
+                    android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:orientation="vertical">
 
@@ -43,13 +43,13 @@
                         android:textStyle="bold" />
 
                     <TextView
-                        android:layout_width="wrap_content"
+                        android:layout_width="match_parent"
                         android:layout_height="wrap_content"
                         android:layout_marginBottom="@dimen/text_padding"
                         android:layout_marginTop="@dimen/text_padding"
                         android:ellipsize="end"
                         android:maxLines="2"
-                        android:text="asdfasdfasdfasasfasdfasdfasdfsadfsafsdfadfasdfsadfsadfsdafasdfsafsadfasdfsdafsdawsfasfasdfasdfasdfsadfsadfasdfdasdfasdfasfasfasdf"
+                        android:text="@{item.name.localName}"
                         android:textColor="@android:color/white"
                         android:textSize="34sp" />
 
