--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -41,6 +41,7 @@
             </android.support.v7.widget.Toolbar>
 
             <RelativeLayout
+                android:id="@+id/searchLay"
                 android:layout_width="match_parent"
                 android:layout_height="48dp"
                 android:layout_margin="@dimen/activity_horizontal_margin"
