--- a/app/src/main/res/layout/item_search.xml
+++ b/app/src/main/res/layout/item_search.xml
@@ -29,6 +29,7 @@
             android:orientation="vertical">
 
             <TextView
+                android:id="@+id/searchKeyword"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:text="@{item.keyword}"
@@ -36,6 +37,7 @@
                 android:textStyle="bold" />
 
             <TextView
+                android:id="@+id/searchSub"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:text="asdf"
