--- a/app/src/main/res/layout/item_bus_info.xml
+++ b/app/src/main/res/layout/item_bus_info.xml
@@ -18,7 +18,7 @@
 
         <RelativeLayout
             android:layout_width="50dp"
-            android:layout_height="50dp">
+            android:layout_height="match_parent">
 
             <LinearLayout
                 android:layout_width="2dp"
@@ -52,6 +52,8 @@
         <LinearLayout
             android:layout_width="wrap_content"
             android:layout_height="match_parent"
+            android:layout_marginBottom="@dimen/small_margin"
+            android:layout_marginTop="@dimen/small_margin"
             android:gravity="center_vertical"
             android:orientation="vertical">
 
