--- a/app/src/main/res/values/dimens.xml
+++ b/app/src/main/res/values/dimens.xml
@@ -27,4 +27,6 @@
     <dimen name="cardview_elevation">10dp</dimen>
     <dimen name="cardview_padding">20dp</dimen>
     <dimen name="cartatagview_defaultpadding">30dp</dimen>
+    <dimen name="fare_circle_width">70dp</dimen>
+    <dimen name="fare_circle_small_width">35dp</dimen>
 </resources>
