--- a/app/src/main/res/layout/activity_bus_fare_speak.xml
+++ b/app/src/main/res/layout/activity_bus_fare_speak.xml
@@ -1,13 +1,84 @@
 <?xml version="1.0" encoding="utf-8"?>
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
-    android:id="@+id/activity_bus_fare_speak"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:paddingBottom="@dimen/activity_vertical_margin"
-    android:paddingLeft="@dimen/activity_horizontal_margin"
-    android:paddingRight="@dimen/activity_horizontal_margin"
-    android:paddingTop="@dimen/activity_vertical_margin"
-    tools:context="kr.edcan.buspolis.BusFareSpeakActivity">
+    xmlns:app="http://schemas.android.com/apk/res-auto"
+    android:background="@color/colorAccent"
+    tools:context="kr.edcan.buspolis.HelpActivity">
 
+    <ImageView
+        android:id="@+id/icBack"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:background="?attr/selectableItemBackgroundBorderless"
+        android:clickable="true"
+        android:padding="@dimen/activity_horizontal_margin"
+        android:src="@drawable/ic_back" />
+
+    <LinearLayout
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:layout_below="@+id/icBack"
+        android:orientation="vertical"
+>
+
+        <LinearLayout
+            android:layout_weight="1"
+            android:padding="@dimen/activity_horizontal_margin"
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:orientation="vertical">
+
+            <TextView
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:text="@string/show_it"
+                android:textColor="@color/textLight"
+                android:textSize="@dimen/default_text" />
+
+            <Space
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:padding="@dimen/element_margin" />
+
+            <TextView
+                android:id="@+id/helpKor"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_marginTop="@dimen/element_margin"
+                android:textColor="@color/colorPrimary"
+                android:textSize="32sp"
+                android:textStyle="bold" />
+
+            <TextView
+                android:id="@+id/helpRomaji"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_marginTop="@dimen/main_padding"
+                android:textColor="@color/colorPrimary"
+                android:textSize="@dimen/default_text" />
+        </LinearLayout>
+        <LinearLayout
+            android:id="@+id/bottomBarBackground"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:gravity="center"
+            android:orientation="horizontal"
+            android:padding="@dimen/main_padding"
+            android:weightSum="2">
+
+            <kr.edcan.buspolis.view.CartaTagView
+                android:id="@+id/close"
+                android:layout_width="0dp"
+                android:layout_height="@dimen/button_height"
+                android:layout_weight="1"
+                android:text="@string/close"
+                app:fullMode="false"
+                app:themeColor="@android:color/white" />
+
+        </LinearLayout>
+    </LinearLayout>
+
+    <!--TODO Information-->
 </RelativeLayout>
