BusFareShowActivity 정보 넘기기 완료

--- a/app/src/main/res/layout/activity_bus_fare_speak.xml
+++ b/app/src/main/res/layout/activity_bus_fare_speak.xml
@@ -1,11 +1,12 @@
 <?xml version="1.0" encoding="utf-8"?>
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
+    android:id="@+id/background"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
     android:background="@color/colorAccent"
-    tools:context="kr.edcan.buspolis.HelpActivity">
+    tools:context="kr.edcan.buspolis.BusFareSpeakActivity">
 
     <ImageView
         android:id="@+id/icBack"
@@ -20,15 +21,14 @@
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:layout_below="@+id/icBack"
-        android:orientation="vertical"
->
+        android:orientation="vertical">
 
         <LinearLayout
-            android:layout_weight="1"
-            android:padding="@dimen/activity_horizontal_margin"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
-            android:orientation="vertical">
+            android:layout_weight="1"
+            android:orientation="vertical"
+            android:padding="@dimen/activity_horizontal_margin">
 
             <TextView
                 android:layout_width="match_parent"
@@ -59,8 +59,8 @@
                 android:textColor="@color/colorPrimary"
                 android:textSize="@dimen/default_text" />
         </LinearLayout>
+
         <LinearLayout
-            android:id="@+id/bottomBarBackground"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:gravity="center"
