--- a/app/src/main/res/layout/activity_bus_fare_show.xml
+++ b/app/src/main/res/layout/activity_bus_fare_show.xml
@@ -87,9 +87,9 @@
                 android:background="#44FFFFFF" />
 
             <TextView
+                android:id="@+id/resultText"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:text="asdf"
                 android:textColor="@color/textLight"
                 android:textSize="@dimen/default_text" />
         </LinearLayout>
@@ -120,7 +120,6 @@
             android:id="@+id/bottomBarBackground"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:background="@color/busBlueDark"
             android:gravity="center"
             android:orientation="horizontal"
             android:padding="@dimen/main_padding"
@@ -136,7 +135,7 @@
                 app:themeColor="@android:color/white" />
 
             <kr.edcan.buspolis.view.CartaTagView
-                android:id="@+id/Speak"
+                android:id="@+id/speak"
                 android:layout_width="0dp"
                 android:layout_height="@dimen/button_height"
                 android:layout_marginLeft="@dimen/small_margin"
