--- a/app/src/main/res/layout/activity_bus_fare_show.xml
+++ b/app/src/main/res/layout/activity_bus_fare_show.xml
@@ -52,6 +52,7 @@
                     android:layout_weight="1">
 
                     <TextView
+                        android:id="@+id/money"
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
                         android:text="2820"
