터치이펙트들 수정 버스 정류장 정보

--- a/app/src/main/res/layout/activity_bus_fare_show.xml
+++ b/app/src/main/res/layout/activity_bus_fare_show.xml
@@ -131,6 +131,8 @@
                 android:layout_width="0dp"
                 android:layout_height="@dimen/button_height"
                 android:layout_weight="1"
+                android:background="@drawable/selector_border"
+                android:clickable="true"
                 android:text="@string/close"
                 app:fullMode="false"
                 app:themeColor="@android:color/white" />
@@ -141,6 +143,8 @@
                 android:layout_height="@dimen/button_height"
                 android:layout_marginLeft="@dimen/small_margin"
                 android:layout_weight="1"
+                android:background="@drawable/selector_fill"
+                android:clickable="true"
                 android:text="@string/speak"
                 app:fullMode="true"
                 app:textThemeColor="@color/busBlueDark"
