--- a/app/src/main/res/layout/activity_bus_fare_select.xml
+++ b/app/src/main/res/layout/activity_bus_fare_select.xml
@@ -262,6 +262,8 @@
                 android:layout_width="0dp"
                 android:layout_height="@dimen/button_height"
                 android:layout_weight="1"
+                android:background="@drawable/selector_fill"
+                android:clickable="true"
                 android:text="@string/calculate"
                 app:fullMode="true"
                 app:textThemeColor="@color/busBlueDark"
