--- a/app/src/main/res/layout/activity_bus_info.xml
+++ b/app/src/main/res/layout/activity_bus_info.xml
@@ -65,7 +65,6 @@
                             android:layout_width="wrap_content"
                             android:layout_height="wrap_content"
                             android:singleLine="true"
-                            android:text="asdfasdfasdfasdfasdf"
                             android:textColor="@color/textLight"
                             android:textSize="@dimen/large_text"
                             android:textStyle="bold" />
@@ -76,7 +75,6 @@
                             android:layout_height="wrap_content"
                             android:gravity="center"
                             android:singleLine="true"
-                            android:text="↕"
                             android:textColor="@color/textLight"
                             android:textSize="@dimen/large_text"
                             android:textStyle="bold" />
@@ -86,7 +84,6 @@
                             android:layout_width="wrap_content"
                             android:layout_height="wrap_content"
                             android:singleLine="true"
-                            android:text="asdf"
                             android:textColor="@color/textLight"
                             android:textSize="@dimen/large_text"
                             android:textStyle="bold" />
@@ -104,6 +101,8 @@
                         android:layout_alignParentBottom="true"
                         android:layout_gravity="bottom"
                         android:layout_margin="@dimen/activity_horizontal_margin"
+                        android:background="@drawable/selector_border"
+                        android:clickable="true"
                         android:paddingBottom="8dp"
                         android:paddingLeft="40dp"
                         android:paddingRight="40dp"
@@ -124,8 +123,7 @@
                 android:layout_width="match_parent"
                 android:layout_height="match_parent"
                 android:layout_marginBottom="60dp"
-                tools:listitem="@layout/item_bus_info"
-                tools:text="asdf" />
+                tools:listitem="@layout/item_bus_info" />
 
             <RelativeLayout
                 android:layout_width="match_parent"
@@ -138,6 +136,8 @@
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:layout_centerInParent="true"
+                    android:background="@drawable/selector_border"
+                    android:clickable="true"
                     android:paddingBottom="10dp"
                     android:paddingLeft="60dp"
                     android:paddingRight="60dp"
