--- a/app/src/main/res/layout/content_main_header.xml
+++ b/app/src/main/res/layout/content_main_header.xml
@@ -16,31 +16,59 @@
 
         <android.support.v7.widget.CardView
             android:layout_width="match_parent"
-            android:layout_height="200dp"
+            android:layout_height="wrap_content"
             android:layout_marginLeft="@dimen/recycler_default_margin"
             android:layout_marginRight="@dimen/recycler_default_margin"
             android:layout_marginTop="@dimen/recycler_default_margin"
+            android:minHeight="160dp"
             app:cardBackgroundColor="@color/colorAccent"
             app:cardCornerRadius="@dimen/cardview_radius"
             app:cardElevation="@dimen/cardview_elevation">
 
-            <RelativeLayout
+            <LinearLayout
                 android:layout_width="match_parent"
-                android:layout_height="match_parent"
-                android:padding="@dimen/cardview_padding">
+                android:layout_height="wrap_content"
+                android:orientation="vertical"
+                android:padding="@dimen/cardview_padding"
+                android:weightSum="1">
 
                 <LinearLayout
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
-                    android:orientation="vertical">
+                    android:layout_weight="1"
+                    android:orientation="vertical"
+                    android:weightSum="1">
 
-                    <TextView
-                        android:layout_width="wrap_content"
+                    <LinearLayout
+                        android:weightSum="1"
+                        android:layout_width="match_parent"
                         android:layout_height="wrap_content"
-                        android:text="@string/near_bus_stop"
-                        android:textColor="@android:color/white"
-                        android:textSize="@dimen/sub_text"
-                        android:textStyle="bold" />
+                        android:orientation="horizontal">
+
+                        <TextView
+                            android:layout_weight="1"
+                            android:layout_width="wrap_content"
+                            android:layout_height="wrap_content"
+                            android:text="@string/near_bus_stop"
+                            android:textColor="@android:color/white"
+                            android:textSize="@dimen/sub_text"
+                            android:textStyle="bold" />
+
+                        <kr.edcan.buspolis.view.CartaTagView
+                            android:layout_width="wrap_content"
+                            android:layout_height="wrap_content"
+                            android:paddingBottom="2dp"
+                            android:paddingLeft="@dimen/text_padding"
+                            android:paddingRight="@dimen/text_padding"
+                            android:paddingTop="2dp"
+                            android:text='@{item.code}'
+                            android:textSize="@dimen/small_text"
+                            android:textStyle="bold"
+                            app:fullMode="true"
+                            app:textThemeColor="@color/colorAccent"
+                            app:textThemeColorEnabled="true"
+                            app:themeColor="@android:color/white" />
+                    </LinearLayout>
 
                     <TextView
                         android:layout_width="match_parent"
@@ -52,79 +80,68 @@
                         android:text="@{item.name.localName}"
                         android:textColor="@android:color/white"
                         android:textSize="34sp" />
-
-                    <RelativeLayout
-                        android:layout_width="match_parent"
-                        android:layout_height="wrap_content">
-
-                        <LinearLayout
-                            android:layout_width="wrap_content"
-                            android:layout_height="wrap_content"
-                            android:layout_alignParentBottom="true"
-                            android:orientation="vertical">
-
-                            <TextView
-                                android:layout_width="wrap_content"
-                                android:layout_height="wrap_content"
-                                android:text="@{item.name.ko}"
-                                android:textColor="@color/textLight"
-                                android:textSize="@dimen/small_text" />
-
-                            <TextView
-                                android:layout_width="wrap_content"
-                                android:layout_height="wrap_content"
-                                android:text="@{item.name.engSub}"
-                                android:textColor="@color/textLight"
-                                android:textSize="@dimen/small_text" />
-
-                        </LinearLayout>
-
-                        <LinearLayout
-                            android:layout_width="wrap_content"
-                            android:layout_height="wrap_content"
-                            android:layout_alignParentBottom="true"
-                            android:layout_alignParentRight="true"
-                            android:orientation="horizontal">
-
-                            <ImageView
-                                android:layout_width="36dp"
-                                android:layout_height="36dp"
-                                android:background="@drawable/circle_white"
-                                android:padding="@dimen/main_padding"
-                                android:src="@drawable/btn_ic_share" />
-
-                            <kr.edcan.buspolis.view.CartaTagView
-                                android:layout_width="wrap_content"
-                                android:layout_height="wrap_content"
-                                android:layout_gravity="center_vertical"
-                                android:layout_marginLeft="10dp"
-                                android:background="@drawable/selector_border"
-                                android:clickable="true"
-                                android:paddingBottom="@dimen/main_padding"
-                                android:paddingLeft="@dimen/cartatagview_defaultpadding"
-                                android:paddingRight="@dimen/cartatagview_defaultpadding"
-                                android:paddingTop="@dimen/main_padding"
-                                android:text="@string/more"
-                                app:themeColor="@android:color/white" />
-                        </LinearLayout>
-                    </RelativeLayout>
                 </LinearLayout>
-                <kr.edcan.buspolis.view.CartaTagView
-                    android:layout_width="wrap_content"
+
+                <LinearLayout
+                    android:layout_width="match_parent"
                     android:layout_height="wrap_content"
-                    android:layout_alignParentRight="true"
-                    android:paddingBottom="2dp"
-                    android:paddingLeft="@dimen/text_padding"
-                    android:paddingRight="@dimen/text_padding"
-                    android:paddingTop="2dp"
-                    android:text='@{item.code}'
-                    android:textSize="@dimen/small_text"
-                    android:textStyle="bold"
-                    app:fullMode="true"
-                    app:textThemeColor="@color/colorAccent"
-                    app:textThemeColorEnabled="true"
-                    app:themeColor="@android:color/white" />
-            </RelativeLayout>
+                    android:layout_weight="1"
+                    android:gravity="bottom"
+                    android:minHeight="48dp"
+                    android:orientation="horizontal"
+                    android:weightSum="1">
+
+                    <LinearLayout
+                        android:layout_width="0dp"
+                        android:layout_height="wrap_content"
+                        android:layout_weight="1"
+                        android:orientation="vertical">
+
+                        <TextView
+                            android:layout_width="wrap_content"
+                            android:layout_height="wrap_content"
+                            android:text="@{item.name.ko}"
+                            android:textColor="@color/textLight"
+                            android:textSize="@dimen/small_text" />
+
+                        <TextView
+                            android:layout_width="wrap_content"
+                            android:layout_height="wrap_content"
+                            android:text="@{item.name.engSub}"
+                            android:textColor="@color/textLight"
+                            android:textSize="@dimen/small_text" />
+
+                    </LinearLayout>
+
+                    <LinearLayout
+                        android:layout_width="wrap_content"
+                        android:layout_height="match_parent"
+                        android:gravity="bottom"
+                        android:orientation="horizontal">
+
+                        <ImageView
+                            android:layout_width="36dp"
+                            android:layout_height="36dp"
+                            android:background="@drawable/circle_white"
+                            android:padding="@dimen/main_padding"
+                            android:src="@drawable/btn_ic_share" />
+
+                        <kr.edcan.buspolis.view.CartaTagView
+                            android:layout_width="wrap_content"
+                            android:layout_height="36dp"
+                            android:layout_marginLeft="10dp"
+                            android:background="@drawable/selector_border"
+                            android:clickable="true"
+                            android:onClick="@{item.infoListener}"
+                            android:paddingBottom="@dimen/main_padding"
+                            android:paddingLeft="@dimen/cartatagview_defaultpadding"
+                            android:paddingRight="@dimen/cartatagview_defaultpadding"
+                            android:paddingTop="@dimen/main_padding"
+                            android:text="@string/more"
+                            app:themeColor="@android:color/white" />
+                    </LinearLayout>
+                </LinearLayout>
+            </LinearLayout>
         </android.support.v7.widget.CardView>
 
         <LinearLayout
