--- a/app/src/main/res/layout/activity_bus_info.xml
+++ b/app/src/main/res/layout/activity_bus_info.xml
@@ -55,7 +55,6 @@
                             android:id="@+id/busNumber"
                             android:layout_width="match_parent"
                             android:layout_height="wrap_content"
-                            android:text="asdf"
                             android:textColor="@android:color/white"
                             android:textSize="@dimen/ex_large_text"
                             android:textStyle="bold" />
@@ -75,6 +74,7 @@
                             android:layout_height="wrap_content"
                             android:gravity="center"
                             android:singleLine="true"
+                            android:text="↕"
                             android:textColor="@color/textLight"
                             android:textSize="@dimen/large_text"
                             android:textStyle="bold" />
