맵에서 도움 페이지

--- a/app/src/main/res/layout/activity_maps.xml
+++ b/app/src/main/res/layout/activity_maps.xml
@@ -35,7 +35,7 @@
         android:weightSum="2">
 
         <kr.edcan.buspolis.view.CartaTagView
-            android:id="@+id/help"
+            android:id="@+id/mapHelp"
             android:layout_width="0dp"
             android:layout_height="@dimen/button_height"
             android:layout_weight="1"
